--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+colorama==0.4.6
 contourpy==1.2.1
 cycler==0.12.1
 fonttools==4.53.0
@@ -11,3 +12,4 @@ pip==24.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 six==1.16.0
+tqdm==4.66.4
